--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,5 +16,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 server.port=${PORT:8082}
 
 # Frontend & Python Analysis URLs
-FRONTEND_URL=http://localhost:8081
+FRONTEND_URL=https://eval-ease-pu8m.vercel.app
 PYTHON_ANALYSIS_URL=http://localhost:5000
