--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,10 @@
 spring.application.name=evalease-backend
 
-# MySQL connection
-spring.datasource.url=jdbc:mysql://mysql.railway.internal:3306/railway
+# MySQL connection (Railway)
+spring.datasource.url=jdbc:mysql://gondola.proxy.rlwy.net:59576/railway?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=aqwtGKPoSSazMXpAtIpSZaNCFWpWVoBk
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
 
 # JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=update
