--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,4 @@ server.port=${PORT:8082}
 
 # Frontend & Python Analysis URLs
 FRONTEND_URL=https://eval-ease-pu8m.vercel.app
-PYTHON_ANALYSIS_URL=http://localhost:5000
+PYTHON_ANALYSIS_URL=https://python-analysis-evalease.onrender.com
