--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,5 +15,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 server.port=${PORT:8082}
 
 # Frontend & Python Analysis URLs
-FRONTEND_URL=https://eval-ease-pu8m.vercel.app
+FRONTEND_URL=https://eval-ease-ogxv.vercel.app
 PYTHON_ANALYSIS_URL=https://python-analysis-evalease.onrender.com
